[tool.poetry]
name = "m3102queue"
version = "0.1.0"
description = "Telegram queue for m3102 chat"
authors = ["Pashs-ba <pashs.ba@gmail.com>", "FeToR1 <fedornigretuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
